--- a/FormWebcamJs/FormWebcamJs.Infra.Data/FormWebcamJs.Infra.Data.csproj
+++ b/FormWebcamJs/FormWebcamJs.Infra.Data/FormWebcamJs.Infra.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FormWebcamJs.Domain\FormWebcamJs.Domain.csproj" />
     <ProjectReference Include="..\FormWebcamJs.Infra\FormWebcamJs.Infra.csproj" />
-    <ProjectReference Include="..\FormWebcamJs\FormWebcamJs.Domain\FormWebcamJs.Domain.csproj" />
   </ItemGroup>
 
 </Project>
