--- a/FormWebcamJs/FormWebcamJs.Infra.Crosscuting/FormWebcamJs.Infra.Crosscuting.csproj
+++ b/FormWebcamJs/FormWebcamJs.Infra.Crosscuting/FormWebcamJs.Infra.Crosscuting.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ElmahCore" Version="2.0.7" />
+    <PackageReference Include="ElmahCore.Sql" Version="2.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
