Iniciando refatoração do projeto Application

--- a/src/POC.Webcam.js.Application/POC.Webcam.js.Application.csproj
+++ b/src/POC.Webcam.js.Application/POC.Webcam.js.Application.csproj
@@ -5,6 +5,7 @@
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <UserSecretsId>f9793731-cbc9-451d-afa0-78207d06afeb</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
