--- a/src/POC.Webcam.js.Application/appsettings.Development.json
+++ b/src/POC.Webcam.js.Application/appsettings.Development.json
@@ -1,9 +1,3 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+  "ConnectionString": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=POC.Webcam.js;Data Source=SANTOS-PC\\SQLEXPRESS;"
 }
