Modificando processo de hash de senha

--- a/src/POC.Webcam.js.Domain/POC.Webcam.js.Domain.csproj
+++ b/src/POC.Webcam.js.Domain/POC.Webcam.js.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\POC.Webcam.js.Infra\POC.Webcam.js.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
