--- a/test/POC.Webcam.js.Domain.Test.Unit/POC.Webcam.js.Domain.Test.Unit.csproj
+++ b/test/POC.Webcam.js.Domain.Test.Unit/POC.Webcam.js.Domain.Test.Unit.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\POC.Webcam.js.Test.Tools\POC.Webcam.js.Test.Tools.csproj" />
+  </ItemGroup>
+
 </Project>
